Colaboratory を使用して作成しました

--- a/Yukapedia_Git版.ipynb
+++ b/Yukapedia_Git版.ipynb
@@ -49,53 +49,74 @@
       "metadata": {
         "id": "c7eVMZj5wkD_",
         "colab_type": "code",
-        "outputId": "ee4a2bb1-b2ce-4746-ca7f-962220f869f0",
+        "outputId": "f275c772-10ed-4dfd-fa5b-7ddb7a49d9aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 436
-        }
+          "height": 406
+        },
+        "cellView": "both"
       },
       "source": [
         "import pandas as pd\n",
         "import datetime\n",
         "\n",
-        "# 配信一覧　取得\n",
-        "master = 'https://raw.githubusercontent.com/hanbun-pom/siosio/master/'\n",
-        "youtube = 'https://youtu.be/'\n",
-        "videos = pd.read_csv(master + 'videos.csv')\n",
+        "if s is None:\n",
         "\n",
-        "# コメント一覧　作成\n",
-        "df_list=[]\n",
-        "for Id in videos['videoId']:\n",
-        "    tmp_df = pd.read_table(master + Id + '.tsv', header=None, names=['time','name','comment','videoId'],quotechar='\"', quoting=3)\n",
-        "    tmp_df['videoId']= Id\n",
-        "    df_list.append(tmp_df)\n",
-        "df = pd.concat(df_list, ignore_index=True)\n",
+        "    # 配信一覧　取得\n",
+        "    master = 'https://raw.githubusercontent.com/hanbun-pom/siosio/master/'\n",
+        "    youtube = 'https://youtu.be/'\n",
+        "    videos = pd.read_csv(master + 'videos.csv')\n",
         "\n",
-        "# 配信タイトル、公開時間\n",
-        "df = df.merge(videos)\n",
-        "df['DateTime'] = pd.to_datetime(df['DateTime']).dt.date\n",
+        "    # コメント一覧　作成\n",
+        "    df_list=[]\n",
+        "    for Id in videos['videoId']:\n",
+        "        tmp_df = pd.read_table(master + Id + '.tsv', header=None, names=['time','name','comment','videoId'],quotechar='\"', quoting=3)\n",
+        "        tmp_df['videoId']= Id\n",
+        "        df_list.append(tmp_df)\n",
+        "    df = pd.concat(df_list, ignore_index=True)\n",
         "\n",
-        "# 再生時間指定URL\n",
-        "trans = str.maketrans({':': '',',': ''})\n",
-        "s = df['time'].str.translate(trans).astype(int)\n",
-        "s = s-40*(abs(s)//100)-2400*(abs(s)//10000)+再生開始時間\n",
-        "s = ((abs(s)+s)//2).astype(str)\n",
+        "    # 配信タイトル、公開時間\n",
+        "    df = df.merge(videos)\n",
+        "    df['DateTime'] = pd.to_datetime(df['DateTime']).dt.date\n",
         "\n",
-        "df['videoId'] = youtube + df['videoId'] + '?t=' + s + 's'\n",
+        "    # 再生時間指定URL\n",
+        "    trans = str.maketrans({':': '',',': ''})\n",
+        "    s = df['time'].str.translate(trans).astype(int)\n",
+        "    s = s-40*(abs(s)//100)-2400*(abs(s)//10000)+再生開始時間\n",
+        "    s = ((abs(s)+s)//2).astype(str)\n",
         "\n",
-        "print('コメント取得終了')\n",
-        "df"
+        "    df['videoId'] = youtube + df['videoId'] + '?t=' + s + 's'\n",
+        "\n",
+        "else:\n",
+        "    pass\n",
+        "\n",
+        "#「名前」「コメント」に特定のキーワードを含むコメントを抽出\n",
+        "\n",
+        "名前 = \"\"  #@param {type:\"string\"}\n",
+        "名前完全一致 = False  #@param {type:\"boolean\"} \n",
+        "名前正規表現 = False  #@param {type:\"boolean\"} \n",
+        "コメント = \"\"  #@param {type:\"string\"}\n",
+        "コメント完全一致 = False  #@param {type:\"boolean\"}\n",
+        "コメント正規表現 = False  #@param {type:\"boolean\"} \n",
+        "\n",
+        "再生開始時間 =  -30#@param {type:\"integer\"}\n",
+        "\n",
+        "def query_condition(data, col, query, is_perfect, is_regex):\n",
+        "    if is_perfect:\n",
+        "        return data[col].str.match(query) if is_regex else data[col] == query\n",
+        "    else:\n",
+        "        return data[col].str.contains(query, na=False, regex=is_regex)\n",
+        "\n",
+        "name_condition = query_condition(df, \"name\", 名前, 名前完全一致, 名前正規表現)\n",
+        "comment_condition = query_condition(df, \"comment\", コメント, コメント完全一致, コメント正規表現)\n",
+        "\n",
+        "df2 = df[name_condition & comment_condition].copy()\n",
+        "\n",
+        "pd.set_option('display.max_rows', 10000)\n",
+        "df2"
       ],
-      "execution_count": 185,
+      "execution_count": 202,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "コメント取得終了\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -228,7 +249,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>796065 rows × 6 columns</p>\n",
+              "<p>795305 rows × 6 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
@@ -245,13 +266,13 @@
               "796063  2:05:40      法条裕一  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  2019-12-24\n",
               "796064  2:05:40      a ha  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  2019-12-24\n",
               "\n",
-              "[796065 rows x 6 columns]"
+              "[795305 rows x 6 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 185
+          "execution_count": 202
         }
       ]
     },
@@ -260,28 +281,37 @@
       "metadata": {
         "id": "kMr6QlwnRwrB",
         "colab_type": "code",
+        "outputId": "56cd4fad-781b-4d20-9f20-85ad125ed957",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "279bc6c6-402f-45ce-b5a5-68896ed4cae8"
+          "height": 212
+        }
       },
       "source": [
-        ""
+        "if 's' in locals( ):\n",
+        "    print(s)\n",
+        "else:\n",
+        "    print('a')"
       ],
-      "execution_count": 174,
+      "execution_count": 188,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Timestamp('2020-04-06 00:00:00')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 174
+          "output_type": "stream",
+          "text": [
+            "0            0\n",
+            "1            0\n",
+            "2            0\n",
+            "3            0\n",
+            "4            0\n",
+            "          ... \n",
+            "796060    7509\n",
+            "796061    7509\n",
+            "796062    7510\n",
+            "796063    7510\n",
+            "796064    7510\n",
+            "Name: time, Length: 796065, dtype: object\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
