Colaboratory を使用して作成しました

--- a/Yukapedia_Git版.ipynb
+++ b/Yukapedia_Git版.ipynb
@@ -52,7 +52,7 @@
         "outputId": "f275c772-10ed-4dfd-fa5b-7ddb7a49d9aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 406
+          "height": 419
         },
         "cellView": "both"
       },
@@ -60,11 +60,11 @@
         "import pandas as pd\n",
         "import datetime\n",
         "\n",
-        "if s is None:\n",
+        "if df is None:\n",
         "\n",
         "    # 配信一覧　取得\n",
-        "    master = 'https://raw.githubusercontent.com/hanbun-pom/siosio/master/'\n",
         "    youtube = 'https://youtu.be/'\n",
+        "    master = 'https://raw.githubusercontent.com/hanbun-pom/siosio/master/'\n",
         "    videos = pd.read_csv(master + 'videos.csv')\n",
         "\n",
         "    # コメント一覧　作成\n",
@@ -113,6 +113,7 @@
         "df2 = df[name_condition & comment_condition].copy()\n",
         "\n",
         "pd.set_option('display.max_rows', 10000)\n",
+        "\n",
         "df2"
       ],
       "execution_count": 202,
@@ -284,7 +285,7 @@
         "outputId": "56cd4fad-781b-4d20-9f20-85ad125ed957",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 212
+          "height": 230
         }
       },
       "source": [
