--- a/Yukapedia_Git版.ipynb
+++ b/Yukapedia_Git版.ipynb
@@ -49,18 +49,30 @@
       "metadata": {
         "id": "c7eVMZj5wkD_",
         "colab_type": "code",
-        "outputId": "f275c772-10ed-4dfd-fa5b-7ddb7a49d9aa",
+        "outputId": "22ee2ed0-4311-49a2-a98b-98c57791814b",
+        "cellView": "both",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        },
-        "cellView": "both"
+        }
       },
       "source": [
         "import pandas as pd\n",
         "import datetime\n",
         "\n",
-        "if df is None:\n",
+        "名前 = \"\"  #@param {type:\"string\"}\n",
+        "名前完全一致 = False  #@param {type:\"boolean\"} \n",
+        "名前正規表現 = False  #@param {type:\"boolean\"} \n",
+        "コメント = \"\"  #@param {type:\"string\"}\n",
+        "コメント完全一致 = False  #@param {type:\"boolean\"}\n",
+        "コメント正規表現 = False  #@param {type:\"boolean\"} \n",
+        "\n",
+        "再生開始時間 =  -30#@param {type:\"integer\"}\n",
+        "\n",
+        "try:\n",
+        "    df\n",
+        "\n",
+        "except NameError:\n",
         "\n",
         "    # 配信一覧　取得\n",
         "    youtube = 'https://youtu.be/'\n",
@@ -91,16 +103,6 @@
         "    pass\n",
         "\n",
         "#「名前」「コメント」に特定のキーワードを含むコメントを抽出\n",
-        "\n",
-        "名前 = \"\"  #@param {type:\"string\"}\n",
-        "名前完全一致 = False  #@param {type:\"boolean\"} \n",
-        "名前正規表現 = False  #@param {type:\"boolean\"} \n",
-        "コメント = \"\"  #@param {type:\"string\"}\n",
-        "コメント完全一致 = False  #@param {type:\"boolean\"}\n",
-        "コメント正規表現 = False  #@param {type:\"boolean\"} \n",
-        "\n",
-        "再生開始時間 =  -30#@param {type:\"integer\"}\n",
-        "\n",
         "def query_condition(data, col, query, is_perfect, is_regex):\n",
         "    if is_perfect:\n",
         "        return data[col].str.match(query) if is_regex else data[col] == query\n",
@@ -116,7 +118,7 @@
         "\n",
         "df2"
       ],
-      "execution_count": 202,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,7 +156,7 @@
               "      <td>-1:41</td>\n",
               "      <td>如水</td>\n",
               "      <td>待機</td>\n",
-              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>gY1g0LbsMQw</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
               "      <td>2020-04-06</td>\n",
               "    </tr>\n",
@@ -163,7 +165,7 @@
               "      <td>-1:37</td>\n",
               "      <td>紫ユウキ</td>\n",
               "      <td>しおしおしてきた！</td>\n",
-              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>gY1g0LbsMQw</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
               "      <td>2020-04-06</td>\n",
               "    </tr>\n",
@@ -172,7 +174,7 @@
               "      <td>-1:37</td>\n",
               "      <td>暇つぶし</td>\n",
               "      <td>待機</td>\n",
-              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>gY1g0LbsMQw</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
               "      <td>2020-04-06</td>\n",
               "    </tr>\n",
@@ -181,7 +183,7 @@
               "      <td>-1:34</td>\n",
               "      <td>si n</td>\n",
               "      <td>しおしおっ</td>\n",
-              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>gY1g0LbsMQw</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
               "      <td>2020-04-06</td>\n",
               "    </tr>\n",
@@ -190,7 +192,7 @@
               "      <td>-1:34</td>\n",
               "      <td>pv order</td>\n",
               "      <td>待機🌸</td>\n",
-              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>gY1g0LbsMQw</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
               "      <td>2020-04-06</td>\n",
               "    </tr>\n",
@@ -208,7 +210,7 @@
               "      <td>2:05:39</td>\n",
               "      <td>はやち</td>\n",
               "      <td>ありがとうーー</td>\n",
-              "      <td>https://youtu.be/LZVdK5kgSOk?t=7509s</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
               "      <td>2019-12-24</td>\n",
               "    </tr>\n",
@@ -217,7 +219,7 @@
               "      <td>2:05:39</td>\n",
               "      <td>チヒロ氏</td>\n",
               "      <td>お疲れ様でした！</td>\n",
-              "      <td>https://youtu.be/LZVdK5kgSOk?t=7509s</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
               "      <td>2019-12-24</td>\n",
               "    </tr>\n",
@@ -226,7 +228,7 @@
               "      <td>2:05:40</td>\n",
               "      <td>ふむふむ</td>\n",
               "      <td>あかん涙出てきた</td>\n",
-              "      <td>https://youtu.be/LZVdK5kgSOk?t=7510s</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
               "      <td>2019-12-24</td>\n",
               "    </tr>\n",
@@ -235,7 +237,7 @@
               "      <td>2:05:40</td>\n",
               "      <td>法条裕一</td>\n",
               "      <td>お疲れさま～</td>\n",
-              "      <td>https://youtu.be/LZVdK5kgSOk?t=7510s</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
               "      <td>2019-12-24</td>\n",
               "    </tr>\n",
@@ -244,7 +246,7 @@
               "      <td>2:05:40</td>\n",
               "      <td>a ha</td>\n",
               "      <td>お疲れ様でした！ありがとうございました！</td>\n",
-              "      <td>https://youtu.be/LZVdK5kgSOk?t=7510s</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
               "      <td>2019-12-24</td>\n",
               "    </tr>\n",
@@ -273,7 +275,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 202
+          "execution_count": 3
         }
       ]
     },
@@ -294,7 +296,7 @@
         "else:\n",
         "    print('a')"
       ],
-      "execution_count": 188,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
