Colaboratory を使用して作成しました

--- a/Yukapedia_Git版.ipynb
+++ b/Yukapedia_Git版.ipynb
@@ -49,11 +49,11 @@
       "metadata": {
         "id": "c7eVMZj5wkD_",
         "colab_type": "code",
-        "outputId": "22ee2ed0-4311-49a2-a98b-98c57791814b",
+        "outputId": "8ac4966a-f0ce-4cea-a4dd-1ce1b4e33903",
         "cellView": "both",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 419
+          "height": 421
         }
       },
       "source": [
@@ -63,11 +63,15 @@
         "名前 = \"\"  #@param {type:\"string\"}\n",
         "名前完全一致 = False  #@param {type:\"boolean\"} \n",
         "名前正規表現 = False  #@param {type:\"boolean\"} \n",
-        "コメント = \"\"  #@param {type:\"string\"}\n",
+        "#@markdown ---\n",
+        "コメント = \"siosio\"  #@param {type:\"string\"}\n",
         "コメント完全一致 = False  #@param {type:\"boolean\"}\n",
         "コメント正規表現 = False  #@param {type:\"boolean\"} \n",
-        "\n",
-        "再生開始時間 =  -30#@param {type:\"integer\"}\n",
+        "#@markdown ---\n",
+        "再生開始時間（秒前） =  40#@param {type:\"slider\", min:0, max:60, step:5}\n",
+        "#@markdown ---\n",
+        "配信日 = '2018-03-22' #@param {type:\"date\"} \n",
+        "配信日 = '2018-03-22' #@param {type:\"date\"}　\n",
         "\n",
         "try:\n",
         "    df\n",
@@ -152,124 +156,133 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>-1:41</td>\n",
-              "      <td>如水</td>\n",
-              "      <td>待機</td>\n",
-              "      <td>gY1g0LbsMQw</td>\n",
-              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06</td>\n",
+              "      <th>30079</th>\n",
+              "      <td>3:29</td>\n",
+              "      <td>Amelia</td>\n",
+              "      <td>siosio</td>\n",
+              "      <td>https://youtu.be/mUltiyD9aSc?t=179s</td>\n",
+              "      <td>【マイクラ】エンドラ討伐RTA( ᐢ˙꒳​˙ᐢ )【Vtuber】</td>\n",
+              "      <td>2020-04-04</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>-1:37</td>\n",
-              "      <td>紫ユウキ</td>\n",
-              "      <td>しおしおしてきた！</td>\n",
-              "      <td>gY1g0LbsMQw</td>\n",
-              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06</td>\n",
+              "      <th>93398</th>\n",
+              "      <td>0:00</td>\n",
+              "      <td>dummy</td>\n",
+              "      <td>siosio</td>\n",
+              "      <td>https://youtu.be/ULrnUj-PvrY?t=0s</td>\n",
+              "      <td>【あつまれ どうぶつの森】花音とわいわいするだけ【Vtuber】</td>\n",
+              "      <td>2020-03-29</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>-1:37</td>\n",
-              "      <td>暇つぶし</td>\n",
-              "      <td>待機</td>\n",
-              "      <td>gY1g0LbsMQw</td>\n",
-              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06</td>\n",
+              "      <th>93399</th>\n",
+              "      <td>0:00</td>\n",
+              "      <td>dummy</td>\n",
+              "      <td>siosio</td>\n",
+              "      <td>https://youtu.be/OnQfDQSyyss?t=0s</td>\n",
+              "      <td>【雀魂】コンビ打ち麻雀🔥【楠栞桜視点】</td>\n",
+              "      <td>2020-03-26</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>-1:34</td>\n",
-              "      <td>si n</td>\n",
-              "      <td>しおしおっ</td>\n",
-              "      <td>gY1g0LbsMQw</td>\n",
-              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06</td>\n",
+              "      <th>93400</th>\n",
+              "      <td>0:00</td>\n",
+              "      <td>dummy</td>\n",
+              "      <td>siosio</td>\n",
+              "      <td>https://youtu.be/Xs7YsWWrA5s?t=0s</td>\n",
+              "      <td>【テトリス99】テトリス上手くなりたい！！【視聴者参加型】</td>\n",
+              "      <td>2020-03-25</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>-1:34</td>\n",
-              "      <td>pv order</td>\n",
-              "      <td>待機🌸</td>\n",
-              "      <td>gY1g0LbsMQw</td>\n",
-              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06</td>\n",
+              "      <th>93401</th>\n",
+              "      <td>0:00</td>\n",
+              "      <td>dummy</td>\n",
+              "      <td>siosio</td>\n",
+              "      <td>https://youtu.be/PyZO36SNLxM?t=0s</td>\n",
+              "      <td>【ましゅまろ雑談】６万人✨ありがとうございます！【Vtuber】</td>\n",
+              "      <td>2020-03-23</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
+              "      <th>93402</th>\n",
+              "      <td>0:00</td>\n",
+              "      <td>dummy</td>\n",
+              "      <td>siosio</td>\n",
+              "      <td>https://youtu.be/GmKvmu55lWY?t=0s</td>\n",
+              "      <td>【あつまれ どうぶつの森 / ３日目】カブで一攫千金狙います。【お店オープン編】</td>\n",
+              "      <td>2020-03-21</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>796060</th>\n",
-              "      <td>2:05:39</td>\n",
-              "      <td>はやち</td>\n",
-              "      <td>ありがとうーー</td>\n",
-              "      <td>LZVdK5kgSOk</td>\n",
-              "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>2019-12-24</td>\n",
+              "      <th>604727</th>\n",
+              "      <td>-0:31</td>\n",
+              "      <td>桜花</td>\n",
+              "      <td>siosio</td>\n",
+              "      <td>https://youtu.be/BGU8JNazFpg?t=0s</td>\n",
+              "      <td>【ポケットモンスターソードシールド】ガチ初心者のポケモン実況 #3【Vtuber】</td>\n",
+              "      <td>2020-01-24</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>796061</th>\n",
-              "      <td>2:05:39</td>\n",
-              "      <td>チヒロ氏</td>\n",
-              "      <td>お疲れ様でした！</td>\n",
-              "      <td>LZVdK5kgSOk</td>\n",
-              "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>2019-12-24</td>\n",
+              "      <th>604793</th>\n",
+              "      <td>0:18</td>\n",
+              "      <td>みしまるみしまる</td>\n",
+              "      <td>siosio</td>\n",
+              "      <td>https://youtu.be/BGU8JNazFpg?t=0s</td>\n",
+              "      <td>【ポケットモンスターソードシールド】ガチ初心者のポケモン実況 #3【Vtuber】</td>\n",
+              "      <td>2020-01-24</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>796062</th>\n",
-              "      <td>2:05:40</td>\n",
-              "      <td>ふむふむ</td>\n",
-              "      <td>あかん涙出てきた</td>\n",
-              "      <td>LZVdK5kgSOk</td>\n",
-              "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>2019-12-24</td>\n",
+              "      <th>642780</th>\n",
+              "      <td>0:03</td>\n",
+              "      <td>図書館動かない</td>\n",
+              "      <td>shioshio…siosio</td>\n",
+              "      <td>https://youtu.be/gGIQcCCDBKI?t=0s</td>\n",
+              "      <td>【オーバーウォッチ】レベルをあげていつかはランクに…【Vtuber】</td>\n",
+              "      <td>2020-01-22</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>796063</th>\n",
-              "      <td>2:05:40</td>\n",
-              "      <td>法条裕一</td>\n",
-              "      <td>お疲れさま～</td>\n",
-              "      <td>LZVdK5kgSOk</td>\n",
-              "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>2019-12-24</td>\n",
+              "      <th>642789</th>\n",
+              "      <td>0:11</td>\n",
+              "      <td>桜花</td>\n",
+              "      <td>siosio</td>\n",
+              "      <td>https://youtu.be/gGIQcCCDBKI?t=0s</td>\n",
+              "      <td>【オーバーウォッチ】レベルをあげていつかはランクに…【Vtuber】</td>\n",
+              "      <td>2020-01-22</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>796064</th>\n",
-              "      <td>2:05:40</td>\n",
-              "      <td>a ha</td>\n",
-              "      <td>お疲れ様でした！ありがとうございました！</td>\n",
-              "      <td>LZVdK5kgSOk</td>\n",
-              "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>2019-12-24</td>\n",
+              "      <th>649459</th>\n",
+              "      <td>1:00:49</td>\n",
+              "      <td>広輪凪</td>\n",
+              "      <td>siosio(∩ˊ꒳​ˋ∩)</td>\n",
+              "      <td>https://youtu.be/gGIQcCCDBKI?t=3619s</td>\n",
+              "      <td>【オーバーウォッチ】レベルをあげていつかはランクに…【Vtuber】</td>\n",
+              "      <td>2020-01-22</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>687550</th>\n",
+              "      <td>0:17</td>\n",
+              "      <td>184</td>\n",
+              "      <td>siosioisoisosiosiosiso</td>\n",
+              "      <td>https://youtu.be/HRp3p7sgEEE?t=0s</td>\n",
+              "      <td>【天鳳】レートの稼ぎ方を教えてください【Vtuber】</td>\n",
+              "      <td>2020-01-19</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>795305 rows × 6 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "           time      name  ...                             title    DateTime\n",
-              "0         -1:41        如水  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  2020-04-06\n",
-              "1         -1:37      紫ユウキ  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  2020-04-06\n",
-              "2         -1:37      暇つぶし  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  2020-04-06\n",
-              "3         -1:34      si n  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  2020-04-06\n",
-              "4         -1:34  pv order  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  2020-04-06\n",
-              "...         ...       ...  ...                               ...         ...\n",
-              "796060  2:05:39       はやち  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  2019-12-24\n",
-              "796061  2:05:39      チヒロ氏  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  2019-12-24\n",
-              "796062  2:05:40      ふむふむ  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  2019-12-24\n",
-              "796063  2:05:40      法条裕一  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  2019-12-24\n",
-              "796064  2:05:40      a ha  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  2019-12-24\n",
+              "           time  ...    DateTime\n",
+              "30079      3:29  ...  2020-04-04\n",
+              "93398      0:00  ...  2020-03-29\n",
+              "93399      0:00  ...  2020-03-26\n",
+              "93400      0:00  ...  2020-03-25\n",
+              "93401      0:00  ...  2020-03-23\n",
+              "93402      0:00  ...  2020-03-21\n",
+              "604727    -0:31  ...  2020-01-24\n",
+              "604793     0:18  ...  2020-01-24\n",
+              "642780     0:03  ...  2020-01-22\n",
+              "642789     0:11  ...  2020-01-22\n",
+              "649459  1:00:49  ...  2020-01-22\n",
+              "687550     0:17  ...  2020-01-19\n",
               "\n",
-              "[795305 rows x 6 columns]"
+              "[12 rows x 6 columns]"
             ]
           },
           "metadata": {
