Colaboratory を使用して作成しました

--- a/Yukapedia_Git版.ipynb
+++ b/Yukapedia_Git版.ipynb
@@ -49,17 +49,18 @@
       "metadata": {
         "id": "c7eVMZj5wkD_",
         "colab_type": "code",
-        "outputId": "8ac4966a-f0ce-4cea-a4dd-1ce1b4e33903",
+        "outputId": "0f3a72d5-a702-4dec-8d91-af63efb5d5bd",
         "cellView": "both",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 421
+          "height": 625
         }
       },
       "source": [
         "import pandas as pd\n",
         "import datetime\n",
         "\n",
+        "#@markdown ---\n",
         "名前 = \"\"  #@param {type:\"string\"}\n",
         "名前完全一致 = False  #@param {type:\"boolean\"} \n",
         "名前正規表現 = False  #@param {type:\"boolean\"} \n",
@@ -68,10 +69,13 @@
         "コメント完全一致 = False  #@param {type:\"boolean\"}\n",
         "コメント正規表現 = False  #@param {type:\"boolean\"} \n",
         "#@markdown ---\n",
-        "再生開始時間（秒前） =  40#@param {type:\"slider\", min:0, max:60, step:5}\n",
+        "t秒前から再生 = 30 #@param {type:\"slider\", min:0, max:60, step:5}\n",
         "#@markdown ---\n",
-        "配信日 = '2018-03-22' #@param {type:\"date\"} \n",
-        "配信日 = '2018-03-22' #@param {type:\"date\"}　\n",
+        "配信日1 = '2019-12-24' #@param {type:\"date\"}\n",
+        "#@markdown ##### 　　　　　　　　　　　　　　　　日より後 \n",
+        "配信日2 = '2040-4-1' #@param {type:\"date\"}　\n",
+        "#@markdown ##### 　　　　　　　　　　　　　　　　日より前\n",
+        "\n",
         "\n",
         "try:\n",
         "    df\n",
@@ -98,7 +102,7 @@
         "    # 再生時間指定URL\n",
         "    trans = str.maketrans({':': '',',': ''})\n",
         "    s = df['time'].str.translate(trans).astype(int)\n",
-        "    s = s-40*(abs(s)//100)-2400*(abs(s)//10000)+再生開始時間\n",
+        "    s = s-40*(abs(s)//100)-2400*(abs(s)//10000)-t秒前から再生\n",
         "    s = ((abs(s)+s)//2).astype(str)\n",
         "\n",
         "    df['videoId'] = youtube + df['videoId'] + '?t=' + s + 's'\n",
@@ -122,7 +126,7 @@
         "\n",
         "df2"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,7 +292,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 1
         }
       ]
     },
@@ -297,37 +301,33 @@
       "metadata": {
         "id": "kMr6QlwnRwrB",
         "colab_type": "code",
-        "outputId": "56cd4fad-781b-4d20-9f20-85ad125ed957",
+        "outputId": "b9a5ff6d-3457-4cff-d284-6899b0f588f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 230
+          "height": 202
         }
       },
       "source": [
-        "if 's' in locals( ):\n",
-        "    print(s)\n",
-        "else:\n",
-        "    print('a')"
+        "#df2(df2['DateTime'] > 配信日1)\n",
+        "\n",
+        "#df['DateTime'][1]\n",
+        "start = datetime.datetime.strptime(配信日1, '%Y-%m-%d').date()\n",
+        "end = datetime.datetime.strptime(配信日2, '%Y-%m-%d')\n",
+        "\n",
+        "df = df.query(start < DateTime)"
       ],
-      "execution_count": 0,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "0            0\n",
-            "1            0\n",
-            "2            0\n",
-            "3            0\n",
-            "4            0\n",
-            "          ... \n",
-            "796060    7509\n",
-            "796061    7509\n",
-            "796062    7510\n",
-            "796063    7510\n",
-            "796064    7510\n",
-            "Name: time, Length: 796065, dtype: object\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-21-dcd18f23370e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m配信日2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'%Y-%m-%d'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mDateTime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'DateTime' is not defined"
+          ]
         }
       ]
     },
