Colaboratory を使用して作成しました

--- a/Yukapedia.ipynb
+++ b/Yukapedia.ipynb
@@ -31,11 +31,12 @@
         "colab_type": "text"
       },
       "source": [
+        "#Youtubeについたコメントを検索することができます\n",
+        "\n",
         "不特定多数への公開は今の所ご遠慮下さい  \n",
         "当ページ外で行われた操作についての責任は負いかねます  \n",
         "@hanbun_pom\n",
-        "\n",
-        "\n",
+        "    \n",
         "####🌸使い方🌸  \n",
         "① 検索条件を入力  \n",
         "② ↓にカーソルを合わせると表示される ▶ を押して実行"
