Colaboratory を使用して作成しました

--- a/Yukapedia.ipynb
+++ b/Yukapedia.ipynb
@@ -47,11 +47,11 @@
       "metadata": {
         "id": "c7eVMZj5wkD_",
         "colab_type": "code",
-        "outputId": "b0fddb6c-75ee-4a51-da03-7be556b4efa5",
-        "cellView": "form",
+        "outputId": "9b0b77ed-8e75-4667-caef-1fec96a09460",
+        "cellView": "both",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 328
+          "height": 540
         }
       },
       "source": [
@@ -93,6 +93,7 @@
         "\n",
         "    # 配信タイトル、公開時間\n",
         "    df = df.merge(videos)\n",
+        "    df = df.rename(columns={'publishedAt': 'DateTime'})\n",
         "    df['DateTime'] = pd.to_datetime(df['DateTime']).dt.date\n",
         "\n",
         "    # 再生時間指定URL\n",
@@ -125,9 +126,9 @@
         "df3 = df3[df3['DateTime'] <= end]\n",
         "\n",
         "pd.set_option('display.max_rows', 10000)\n",
-        "df3"
+        "df3\n"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,7 +162,70 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>60714</th>\n",
+              "      <th>24829</th>\n",
+              "      <td>46:52</td>\n",
+              "      <td>アンサイ/Uncy 安西実験工房</td>\n",
+              "      <td>麻雀マシーン</td>\n",
+              "      <td>https://youtu.be/l49nuiyQsPw?t=2782s</td>\n",
+              "      <td>【NieR:Automata #1】ずっと気になってたゲームをやる！【Vtuber】</td>\n",
+              "      <td>2020-05-01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>82096</th>\n",
+              "      <td>1:13:39</td>\n",
+              "      <td>Association Sakura</td>\n",
+              "      <td>麻雀マシーン</td>\n",
+              "      <td>https://youtu.be/QJaCQm-oc6Q?t=4389s</td>\n",
+              "      <td>【白鳥裁判】魚谷侑未プロと白鳥翔プロ呼んどいて、雑談するVtuberマジ？【🐟🌸🦢】</td>\n",
+              "      <td>2020-04-29</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>111896</th>\n",
+              "      <td>43:40</td>\n",
+              "      <td>wildcat5314</td>\n",
+              "      <td>麻雀マシーン</td>\n",
+              "      <td>https://youtu.be/82NyKZTrAwI?t=2590s</td>\n",
+              "      <td>【ASMR】バイノーラルマイクを買いました🎤【Vtuber】</td>\n",
+              "      <td>2020-04-26</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>156586</th>\n",
+              "      <td>7:40</td>\n",
+              "      <td>アレアレア</td>\n",
+              "      <td>麻雀マシーン</td>\n",
+              "      <td>https://youtu.be/16ZnGTzrZ0k?t=430s</td>\n",
+              "      <td>【ネコトモ】立派なネコ雀士にしてあげる【Vtuber】</td>\n",
+              "      <td>2020-04-23</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>156602</th>\n",
+              "      <td>7:45</td>\n",
+              "      <td>白薔薇</td>\n",
+              "      <td>麻雀マシーン</td>\n",
+              "      <td>https://youtu.be/16ZnGTzrZ0k?t=435s</td>\n",
+              "      <td>【ネコトモ】立派なネコ雀士にしてあげる【Vtuber】</td>\n",
+              "      <td>2020-04-23</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>156916</th>\n",
+              "      <td>9:12</td>\n",
+              "      <td>としさん</td>\n",
+              "      <td>麻雀マシーン</td>\n",
+              "      <td>https://youtu.be/16ZnGTzrZ0k?t=522s</td>\n",
+              "      <td>【ネコトモ】立派なネコ雀士にしてあげる【Vtuber】</td>\n",
+              "      <td>2020-04-23</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>198305</th>\n",
+              "      <td>48:05</td>\n",
+              "      <td>いざよいさくや</td>\n",
+              "      <td>麻雀ロボット</td>\n",
+              "      <td>https://youtu.be/SRWpshDzqvc?t=2855s</td>\n",
+              "      <td>天開司と楠栞桜の『てん x くす』三局目 出張版【楠栞桜視点】</td>\n",
+              "      <td>2020-04-15</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>344687</th>\n",
               "      <td>58:55</td>\n",
               "      <td>いえろ〜ず</td>\n",
               "      <td>麻雀マシーン</td>\n",
@@ -170,7 +234,7 @@
               "      <td>2020-04-03</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>189420</th>\n",
+              "      <th>577849</th>\n",
               "      <td>2:34:15</td>\n",
               "      <td>CarMania385</td>\n",
               "      <td>麻雀ロボット</td>\n",
@@ -179,7 +243,7 @@
               "      <td>2020-03-14</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>218029</th>\n",
+              "      <th>606458</th>\n",
               "      <td>49:21</td>\n",
               "      <td>カラスは可愛いのですよ?</td>\n",
               "      <td>麻雀マシーン</td>\n",
@@ -188,7 +252,7 @@
               "      <td>2020-03-06</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>383054</th>\n",
+              "      <th>787928</th>\n",
               "      <td>2:52:42</td>\n",
               "      <td>ひろかわ</td>\n",
               "      <td>麻雀ロボット</td>\n",
@@ -197,7 +261,7 @@
               "      <td>2020-02-21</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>471426</th>\n",
+              "      <th>879814</th>\n",
               "      <td>47:47</td>\n",
               "      <td>北傘</td>\n",
               "      <td>麻雀ロボット</td>\n",
@@ -206,7 +270,7 @@
               "      <td>2020-02-08</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>471444</th>\n",
+              "      <th>879832</th>\n",
               "      <td>47:51</td>\n",
               "      <td>月十字</td>\n",
               "      <td>麻雀ロボット</td>\n",
@@ -215,7 +279,7 @@
               "      <td>2020-02-08</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>631052</th>\n",
+              "      <th>1048973</th>\n",
               "      <td>14:22</td>\n",
               "      <td>不座家ルナ</td>\n",
               "      <td>麻雀ロボット</td>\n",
@@ -224,7 +288,7 @@
               "      <td>2020-01-23</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>631088</th>\n",
+              "      <th>1049009</th>\n",
               "      <td>14:32</td>\n",
               "      <td>もるぽん</td>\n",
               "      <td>麻雀ロボット</td>\n",
@@ -233,7 +297,7 @@
               "      <td>2020-01-23</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>789850</th>\n",
+              "      <th>1207771</th>\n",
               "      <td>1:40:37</td>\n",
               "      <td>白音とと</td>\n",
               "      <td>麻雀ロボット</td>\n",
@@ -246,24 +310,31 @@
               "</div>"
             ],
             "text/plain": [
-              "           time  ...    DateTime\n",
-              "60714     58:55  ...  2020-04-03\n",
-              "189420  2:34:15  ...  2020-03-14\n",
-              "218029    49:21  ...  2020-03-06\n",
-              "383054  2:52:42  ...  2020-02-21\n",
-              "471426    47:47  ...  2020-02-08\n",
-              "471444    47:51  ...  2020-02-08\n",
-              "631052    14:22  ...  2020-01-23\n",
-              "631088    14:32  ...  2020-01-23\n",
-              "789850  1:40:37  ...  2019-12-24\n",
+              "            time  ...    DateTime\n",
+              "24829      46:52  ...  2020-05-01\n",
+              "82096    1:13:39  ...  2020-04-29\n",
+              "111896     43:40  ...  2020-04-26\n",
+              "156586      7:40  ...  2020-04-23\n",
+              "156602      7:45  ...  2020-04-23\n",
+              "156916      9:12  ...  2020-04-23\n",
+              "198305     48:05  ...  2020-04-15\n",
+              "344687     58:55  ...  2020-04-03\n",
+              "577849   2:34:15  ...  2020-03-14\n",
+              "606458     49:21  ...  2020-03-06\n",
+              "787928   2:52:42  ...  2020-02-21\n",
+              "879814     47:47  ...  2020-02-08\n",
+              "879832     47:51  ...  2020-02-08\n",
+              "1048973    14:22  ...  2020-01-23\n",
+              "1049009    14:32  ...  2020-01-23\n",
+              "1207771  1:40:37  ...  2019-12-24\n",
               "\n",
-              "[9 rows x 6 columns]"
+              "[16 rows x 6 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 2
         }
       ]
     },
