Colaboratory を使用して作成しました

--- a/Yukapedia.ipynb
+++ b/Yukapedia.ipynb
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "c7eVMZj5wkD_",
         "colab_type": "code",
-        "outputId": "9b0b77ed-8e75-4667-caef-1fec96a09460",
+        "outputId": "037b80aa-df4c-43a6-9f02-7c3104087190",
         "cellView": "both",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -57,6 +57,7 @@
       "source": [
         "import pandas as pd\n",
         "import datetime\n",
+        "import requests\n",
         "\n",
         "#@markdown ---\n",
         "名前 = \"\"  #@param {type:\"string\"}\n",
@@ -74,7 +75,7 @@
         "\n",
         "\n",
         "try:\n",
-        "    df\n",
+        "    df2\n",
         "\n",
         "except NameError:\n",
         "\n",
@@ -86,9 +87,14 @@
         "    # コメント一覧　作成\n",
         "    df_list=[]\n",
         "    for Id in videos['videoId']:\n",
-        "        tmp_df = pd.read_table(master + Id + '.tsv', header=None, names=['time','name','comment','videoId'],quotechar='\"', quoting=3)\n",
-        "        tmp_df['videoId']= Id\n",
-        "        df_list.append(tmp_df)\n",
+        "        csvURL = master + Id + '.tsv'\n",
+        "        res = requests.get(csvURL)\n",
+        "        if res.status_code == 200:\n",
+        "            tmp_df = pd.read_table(csvURL, header=None, names=['time','name','comment','videoId'],quotechar='\"', quoting=3)\n",
+        "            tmp_df['videoId']= Id\n",
+        "            df_list.append(tmp_df)\n",
+        "        else:\n",
+        "            pass\n",
         "    df = pd.concat(df_list, ignore_index=True)\n",
         "\n",
         "    # 配信タイトル、公開時間\n",
@@ -128,7 +134,7 @@
         "pd.set_option('display.max_rows', 10000)\n",
         "df3\n"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -334,7 +340,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 1
         }
       ]
     },
